--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>I'm a Mobile Developer</h2>
           
           <p>
-            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the Palo Alto iOS Weekly Study Group and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues relating to the geopolitical and medical fields. If you're curious, here's more about me and here's my resume.
+            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the Palo Alto iOS Weekly Study Group and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues relating to the geopolitical and medical fields. If you're curious, <a href="work.html" target="_blank">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
           </p>
 
         <h2>Work</h2>
