add anycdote, move around some text

--- a/about.html
+++ b/about.html
@@ -14,11 +14,21 @@
       <div class="home">
 		<h2>About Me</h2>
 
-		  <p>I am a <a href="https://github.com/danstepanov" rel="external nofollow">Swift and React-Native engineer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">hackathon junky</a>, wanna-be designer, classic car enthusiast, and hummus lover. I live in Palo Alto but I tend to travel a lot.</p>
+		  <p>
+        I am a <a href="https://github.com/danstepanov" rel="external nofollow">Swift and React-Native engineer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">hackathon junky</a>, wanna-be designer, classic car enthusiast, and hummus lover. I live in Palo Alto but I tend to travel a lot.
+      </p>
 
 		  <p>Ask me about it on Twitter if you're curious.</p>
 
-		  <p></p>
+		  <h2>Interests</h2>
+
+      <p>
+        I love colaborative building, good food (especially hummus), socializing, hiking, biking, listening to music and traveling as much as I can.
+      </p>
+
+      <p>
+        Technically, I love iOS development and everything around it. You can find me watching WWDC videos in my free time or creating prototypes and I'd love to know how to build elegant, scalable and technology independent solutions.
+      </p>
 
 		  <p><a href="mailto:dan@barefootcoders.com">Email me</a> and say hi if you're feeling friendly.</p>
 
