--- a/index.html
+++ b/index.html
@@ -18,21 +18,13 @@
         <h2>I'm a Mobile Developer</h2>
           
           <p>
-            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the Palo Alto iOS Weekly Study Group and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues relating to the geopolitical and medical fields. If you're curious, <a href="about.html" target="_blank">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
+            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues relating to the geopolitical and medical fields. If you're curious, <a href="about.html" target="_blank">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
           </p>
 
         <h2>Work</h2>
 
           <p>
-            I work at <a href="https://www.barefootcoders.com" target="_blank">Barefoot Coders</a> as a software engineer developing numerous native apps. Previously, I worked on Hashtack and a company called Amplified, which I started while I was completing my chemical engineering degree at Penn State.
-          </p>
-
-          <p>
-            Since I moved to Silicon Valley in May of 2015, I have worked on several mobile apps. Most recently, I've been working on <a href="http://www.vinous.com" rel="external nofollow" target="_blank">Vinous</a>, a wine exploration platform, as an iOS and Android Developer.
-          </p>
-
-          <p>
-            Previously, I worked as an iOS Developer on <a href="http://www.getbellhops.com" rel="external nofollow" target="_blank">Bellhops</a>, <a href="http://www.hashtack.com" rel="external nofollow" target="_blank">Hashtack</a>, and <a href="http://www.anycdote.com" rel="external nofollow" target="_blank">Anycdote</a>. You can check out more details in my <a href="/work/">Work</a> page.
+            I work at <a href="https://www.barefootcoders.com" target="_blank">Barefoot Coders</a> as a software engineer developing numerous native apps. You can check out more details on my <a href="/work/">Work</a> page.
           </p>
 
           <h3>Latest Apps</h3>
@@ -45,38 +37,18 @@
               </a>
             </li>
             <li>
+              <a href="https://itunes.apple.com/us/app/anycdote/id971437731?ls=1&mt=8" rel="external nofollow" title="Anycdote">
+                <img src="./img/app/anycdote.png" alt="Anycdote">
+                <span>Anycdote</span>
+              </a>
+            </li>
+            <li>
               <a href="work.html" title="Show more apps">
                 <img src="./img/app/Unknown.svg" alt="More apps">
                 <span>More apps</span>
               </a>
             </li>
           </ul>
-
-        <h2>Personal Projects</h2>
-
-          <p>
-              I always make sure I make time for personal projects. 
-          </p>
-
-          <h3><a href="https://projectreach.me/">Project Reach</a></h3>
-          <p>
-             This is a secure & discrete communication platform I made for reporters who work in dangerous areas. I built Reach because I believe that every person is entitled to freedom of speech. Project Reach is both a web app and a native Android app built using <a href="https://facebook.github.io/react/" target="_blank">React</a> and and <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. Reach is currently under development but even so, it encrypts data using SSH and protects users by disguising itself as a different app as well as tying accounts to devices rather than people. Testing is currenly being conducted between a professor at Harvard and users in Syria. 
-          </p>
-
-          <h3><a href="https://anycdote.com/">Anycdote</a></h3>
-          <p>
-             This platform was inspired by Humans of New York. Anycdote allows users to pin personal stories to geographic locations. Other users can then experience stories that close to them by proximity. Anycdote is written completely in Swift and relies on a <a href="https://parse.com" target="_blank">Parse</a> backend. 
-          </p>
-
-
-        <h2>Interests</h2>
-          <p>
-                  I love colaborative building, good food (especially hummus), socializing, hiking, biking, listening to music and traveling as much as I can.
-          </p>
-          <p>
-                  Technically, I love iOS development and everything around it. You can find me watching WWDC videos in my free time or creating prototypes and I'd love to know how to build elegant, scalable and technology independent solutions.
-          </p>
-          <p>
         </div>
         <p style="text-align:center;margin:1.5em 0 1em">
           <a href="https://twitter.com/danstepanov" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @danstepanov</a>
