--- a/work.html
+++ b/work.html
@@ -34,7 +34,31 @@
                 <span>Vinous</span>
               </a>
             </li>
+            <li>
+              <a href="https://itunes.apple.com/us/app/anycdote/id971437731?ls=1&mt=8" rel="external nofollow" title="Anycdote">
+                <img src="./img/app/anycdote.png" alt="Anycdote">
+                <span>Anycdote</span>
+              </a>
+            </li>
           </ul>
+
+          <h2>Personal Projects</h2>
+
+          <p>
+              I always make sure I make time for personal projects. 
+          </p>
+
+          <h3><a href="https://projectreach.me/">Project Reach</a></h3>
+          <p>
+             This is a secure & discrete communication platform I made for reporters who work in dangerous areas. I built Reach because I believe that every person is entitled to freedom of speech. Project Reach is both a web app and a native Android app built using <a href="https://facebook.github.io/react/" target="_blank">React</a> and and <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. Reach is currently under development but even so, it encrypts data using SSH and protects users by disguising itself as a different app as well as tying accounts to devices rather than people. Testing is currenly being conducted between a professor at Harvard and users in Syria. 
+          </p>
+
+          <h3><a href="https://anycdote.com/">Anycdote</a></h3>
+          <p>
+             This platform was inspired by Humans of New York. Anycdote allows users to pin personal stories to geographic locations. Other users can then experience stories that close to them by proximity. Anycdote is written completely in Swift and relies on a <a href="https://parse.com" target="_blank">Parse</a> backend. 
+          </p>
+
+
       </div>
       <p style="text-align:center;margin:1.5em 0 1em">
           <a href="https://twitter.com/danstepanov" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @danstepanov</a>
