remove link from name on main page, fix link to barefoot coders on work page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div "home">
 
-        <h1><a href="/">Dan Stepanov</a></h1>
+        <h1>Dan Stepanov</h1>
 
         <h2>I'm a Mobile Developer</h2>
           
