--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
       <div class="home">
 		    <h2>My Work</h2>
         <p>
-            I work at <a href="https://www.barefootcoders.com" target="_blank">Barefoot Coders</a> as a software engineer developing numerous native apps. Previously, I worked on Hashtack and a company called Amplified, which I started while I was completing my chemical engineering degree at Penn State.
+            I work at <a href="http://www.barefootcoders.com" target="_blank">Barefoot Coders</a> as a software engineer developing numerous native apps. Previously, I worked on Hashtack and a company called Amplified, which I started while I was completing my chemical engineering degree at Penn State.
           </p>
 
           <p>
