add title to website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Dan Stepanov</title>
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
