fix work link on work page

--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
           </p>
 
           <p>
-            Previously, I worked as an iOS Developer on <a href="http://www.getbellhops.com" rel="external nofollow" target="_blank">Bellhops</a>, <a href="http://www.hashtack.com" rel="external nofollow" target="_blank">Hashtack</a>, and <a href="http://www.anycdote.com" rel="external nofollow" target="_blank">Anycdote</a>. You can check out more details in my <a href="/work/">Work</a> page.
+            Previously, I worked as an iOS Developer on <a href="http://www.getbellhops.com" rel="external nofollow" target="_blank">Bellhops</a>, <a href="http://www.hashtack.com" rel="external nofollow" target="_blank">Hashtack</a>, and <a href="http://www.anycdote.com" rel="external nofollow" target="_blank">Anycdote</a>. You can check out more details in my <a href="work.html">Work</a> page.
           </p>
 
           <h3>Latest Apps</h3>
