update work text

--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
 
           <h3><a href="https://projectreach.me/">Project Reach</a></h3>
           <p>
-             This is a secure & discrete communication platform I made for reporters who work in dangerous areas. I built Reach because I believe that every person is entitled to freedom of speech. Project Reach is both a web app and a native Android app built using <a href="https://facebook.github.io/react/" target="_blank">React</a> and and <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. Reach is currently under development but even so, it encrypts data using SSH and protects users by disguising itself as a different app as well as tying accounts to devices rather than people. Testing is currenly being conducted between a professor at Harvard and users in Syria. 
+             This is a secure & discrete communication platform I made for reporters who work in dangerous areas. I built Reach because I believe that every person is entitled to freedom of speech. Project Reach is both a web app and a native Android app built using <a href="https://facebook.github.io/react/" target="_blank">React</a> and and <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. Reach is currently under development but even so, it encrypts data using SSH and protects users by disguising itself as a different app as well as tying accounts to devices rather than people. Testing is currenly being conducted between Harvard and users in Syria. 
           </p>
 
           <h3><a href="https://anycdote.com/">Anycdote</a></h3>
