fixed spelling error

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 		  <h2>Interests</h2>
 
       <p>
-        I love colaborative building, good food (especially hummus), socializing, hiking, biking, listening to music and traveling as much as I can.
+        I love collaborative building, good food (especially hummus), socializing, hiking, biking, listening to music and traveling as much as I can.
       </p>
 
       <p>
