add work folder

--- a/work/index.html
+++ b/work/index.html
@@ -8,7 +8,7 @@
       <div class="header">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="/work">Work</a>
+        <a href="work.html">Work</a>
         <a href="https://medium.com/@danstepanov">Blog</a>
       </div>
       <div class="home">
