fix links across site

--- a/work/index.html
+++ b/work/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="/main.css" rel="stylesheet">
+    <title>Dan Stepanov</title>
+    <link href="./css/main.css" rel="stylesheet">
   </head>
   <body>
-  	<div class="site">
+    <div class="site">
       <div class="header">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="work.html">Work</a>
+        <a href="./">Home</a>
+        <a href="./about">About</a>
+        <a href="./work">Work</a>
         <a href="https://medium.com/@danstepanov">Blog</a>
       </div>
       <div class="home">
@@ -22,7 +23,7 @@
           </p>
 
           <p>
-            Previously, I worked as an iOS Developer on <a href="http://www.getbellhops.com" rel="external nofollow" target="_blank">Bellhops</a>, <a href="http://www.hashtack.com" rel="external nofollow" target="_blank">Hashtack</a>, and <a href="http://www.anycdote.com" rel="external nofollow" target="_blank">Anycdote</a>. You can check out more details in my <a href="work.html">Work</a> page.
+            Previously, I worked as an iOS Developer on <a href="http://www.getbellhops.com" rel="external nofollow" target="_blank">Bellhops</a>, <a href="http://www.hashtack.com" rel="external nofollow" target="_blank">Hashtack</a>, and <a href="http://www.anycdote.com" rel="external nofollow" target="_blank">Anycdote</a>. You can check out more details in my <a href="./work">Work</a> page.
           </p>
 
           <h3>Latest Apps</h3>
