--- a/about/index.html
+++ b/about/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="main.css" rel="stylesheet">
+    <title>Dan Stepanov</title>
+    <link href="./css/main.css" rel="stylesheet">
   </head>
   <body>
-  	<div class="site">
+    <div class="site">
       <div class="header">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="work.html">Work</a>
+        <a href="./">Home</a>
+        <a href="./about">About</a>
+        <a href="./work">Work</a>
         <a href="https://medium.com/@danstepanov">Blog</a>
       </div>
       <div class="home">
