wip:fix linking in site

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <div class="site">
       <div class="header">
-        <a href="./">Home</a>
-        <a href="./about">About</a>
-        <a href="./work">Work</a>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/work">Work</a>
         <a href="https://medium.com/@danstepanov">Blog</a>
       </div>
       <div "home">
@@ -19,13 +19,13 @@
         <h2>I'm a Mobile Developer</h2>
           
           <p>
-            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues relating to the geopolitical and medical fields. If you're curious, <a href="./about" target="_blank">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
+            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues relating to the geopolitical and medical fields. If you're curious, <a href="/about" target="_blank">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
           </p>
 
         <h2>Work</h2>
 
           <p>
-            I work at <a href="https://www.barefootcoders.com" target="_blank">Barefoot Coders</a> as a software engineer developing numerous native apps. You can check out more details on my <a href="./work">Work</a> page.
+            I work at <a href="https://www.barefootcoders.com" target="_blank">Barefoot Coders</a> as a software engineer developing numerous native apps. You can check out more details on my <a href="/work">Work</a> page.
           </p>
 
           <h3>Latest Apps</h3>
