--- a/about/index.html
+++ b/about/index.html
@@ -7,9 +7,9 @@
   <body>
     <div class="site">
       <div class="header">
-        <a href="./">Home</a>
-        <a href="./about">About</a>
-        <a href="./work">Work</a>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/work">Work</a>
         <a href="https://medium.com/@danstepanov">Blog</a>
       </div>
       <div class="home">
