--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Dan Stepanov</title>
-    <link href="./css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
   </head>
   <body>
     <div class="site">
