--- a/work/index.html
+++ b/work/index.html
@@ -31,19 +31,19 @@
           <ul class="apps">
             <li>
               <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" title="Vinous">
-                <img src="./img/app/vinous.jpeg" alt="Vinous">
+                <img src="/img/app/vinous.jpeg" alt="Vinous">
                 <span>Vinous</span>
               </a>
             </li>
             <li>
               <a href="https://itunes.apple.com/us/app/flsgeoconnect/id386641739?mt=8" rel="external nofollow" title="FLSGeoConnect">
-                <img src="./img/app/fls.png" alt="FLSGeoConnect">
+                <img src="/img/app/fls.png" alt="FLSGeoConnect">
                 <span>FLSGeoConnect</span>
               </a>
             </li>
             <li>
               <a href="https://itunes.apple.com/us/app/anycdote/id971437731?ls=1&mt=8" rel="external nofollow" title="Anycdote">
-                <img src="./img/app/anycdote.png" alt="Anycdote">
+                <img src="/img/app/anycdote.png" alt="Anycdote">
                 <span>Anycdote</span>
               </a>
             </li>
