remove open new page for about me link from main page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>I'm a Mobile Developer</h2>
           
           <p>
-            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues relating to the geopolitical and medical fields. If you're curious, <a href="/about" target="_blank">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
+            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues relating to the geopolitical and medical fields. If you're curious, <a href="/about">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
           </p>
 
         <h2>Work</h2>
