update more apps link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </a>
             </li>
             <li>
-              <a href="work.html" title="Show more apps">
+              <a href="/work" title="Show more apps">
                 <img src="./img/app/Unknown.svg" alt="More apps">
                 <span>More apps</span>
               </a>
