add favicon link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Dan Stepanov</title>
     <link href="./css/main.css" rel="stylesheet">
+    <link href="./favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
     <div class="site">
