--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Dan Stepanov</title>
     <link href="./css/main.css" rel="stylesheet">
-    <link href="./favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
     <div class="site">
