--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <title>Dan Stepanov</title>
     <link href="./css/main.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
+    <link id="favicon" rel="icon" type="image/png" sizes="57x52" href="./favicon.png">
   </head>
   <body>
     <div class="site">
