update vinous image

--- a/work/index.html
+++ b/work/index.html
@@ -31,7 +31,7 @@
           <ul class="apps">
             <li>
               <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" title="Vinous">
-                <img src="/img/app/vinous.jpeg" alt="Vinous">
+                <img src="/img/app/vinous.png" alt="Vinous">
                 <span>Vinous</span>
               </a>
             </li>
