--- a/work/index.html
+++ b/work/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Dan Stepanov</title>
     <link href="/css/main.css" rel="stylesheet">
-    <link id="favicon" rel="icon" type="image/png" sizes="57x52" href="./favicon.png">
+    <link id="favicon" rel="icon" type="image/png" sizes="57x52" href="/favicon.png">
   </head>
   <body>
     <div class="site">
