--- a/work/index.html
+++ b/work/index.html
@@ -10,7 +10,7 @@
       <div class="header">
         <a href="/">Home</a>
         <a href="/about">About</a>
-        <a href="/work">Work</a>
+        <a>Work</a>
         <a href="https://medium.com/@danstepanov">Blog</a>
       </div>
       <div class="home">
