modify style on all tabs

--- a/work/index.html
+++ b/work/index.html
@@ -10,7 +10,7 @@
       <div class="header">
         <a href="/">Home</a>
         <a href="/about">About</a>
-        <a>Work</a>
+        <a style="color:black">Work</a>
         <a href="https://medium.com/@danstepanov">Blog</a>
       </div>
       <div class="home">
