--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
     <div class="site">
       <div class="header">
         <a href="/">Home</a>
-        <a>About</a>
+        <a style="color:black">About</a>
         <a href="/work">Work</a>
         <a href="https://medium.com/@danstepanov">Blog</a>
       </div>
