--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="site">
       <div class="header">
-        Home
+        <a style="color:black">Home</a>
         <a href="/about">About</a>
         <a href="/work">Work</a>
         <a href="https://medium.com/@danstepanov">Blog</a>
