--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
         </p>
 
         <p>
-          I've spent a lot of time outside of college studying and exploring various technologies inlcuding human-computer interface, artificial intelligence, machine learning, cross-platform mobile design, and augmented reality via 3D mobile scanning.
+          I've spent a lot of time, outside of college, studying and exploring various technologies inlcuding human-computer interface, artificial intelligence, machine learning, cross-platform mobile design, and augmented reality via 3D mobile scanning.
         </p>
 
         <p>
@@ -56,7 +56,7 @@
         </p>
 
         <p>
-          Technically, I love iOS development and everything around it. You can find me watching WWDC videos in my free time or creating prototypes and I'd love to know how to build elegant, scalable and technology independent solutions.
+          Technically, I love iOS development and everything around it. You can find me watching WWDC videos in my free time or creating prototypes. Every day, I'm learning how to better build elegant, scalable and technologically-focused solutions.
         </p>
 
   		  <p><a href="mailto:dan@barefootcoders.com">Email me</a> and say hi if you're feeling friendly.</p>
