update apps on website

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>Dan Stepanov</h1>
 
         <h2>I'm a Mobile Developer</h2>
-          
+
           <p>
             Hi! I'm a mobile developer living in Palo Alto, California. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues relating to the geopolitical and medical fields. If you're curious, <a href="/about">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
           </p>
@@ -44,9 +44,18 @@
             I work at <a href="https://www.barefootcoders.com" target="_blank">Barefoot Coders</a> as a software engineer developing numerous native apps. Additionally, I'm a mentor at <a href="http://hacker.fund/" target="_blank">Hacker Fund</a> where I help teach high school students to code. You can check out more details on my <a href="/work">Work</a> page.
           </p>
 
+
+
+
           <h3>Latest Apps</h3>
 
           <ul class="apps">
+            <li>
+              <a href="https://tryminerva.com/" rel="external nofollow" title="Minerva">
+                <img src="./img/app/minerva.png" alt="Minerva">
+                <span>Minerva</span>
+              </a>
+            </li>
             <li>
               <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" title="Vinous">
                 <img src="./img/app/vinous.png" alt="Vinous">
@@ -54,15 +63,9 @@
               </a>
             </li>
             <li>
-              <a href="https://itunes.apple.com/us/app/flsgeoconnect/id386641739?mt=8" rel="external nofollow" title="FLSGeoConnect">
+              <a href="https://itunes.apple.com/us/app/geoconnect-pro/id1105973922?mt=8" rel="external nofollow" title="FLSGeoConnect-iOS">
                 <img src="./img/app/fls.png" alt="FLSGeoConnect">
                 <span>FLSGeoConnect</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://itunes.apple.com/us/app/anycdote/id971437731?ls=1&mt=8" rel="external nofollow" title="Anycdote">
-                <img src="./img/app/anycdote.png" alt="Anycdote">
-                <span>Anycdote</span>
               </a>
             </li>
             <li>
@@ -73,7 +76,7 @@
             </li>
           </ul>
         </div>
-        
+
         <div class="footer">
           <a class="email" href="mailto:dan@barefootcoders.com?subject=%5BWEB%5D%20Contact"></a>
           <a class="linkedin" href="http://www.linkedin.com/in/danstepanov" target="_blank"></a>
