update app icon links

--- a/work/index.html
+++ b/work/index.html
@@ -47,27 +47,27 @@
         <ul class="apps">
           <li>
             <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" title="Vinous-iOS">
-              <img src="./img/app/vinous.png" alt="Vinous">
+              <img src="../img/app/vinous.png" alt="Vinous">
               <span>Vinous</span>
             </a>
           </li>
           <li>
             <a href="https://itunes.apple.com/us/app/geoconnect-pro/id1105973922?mt=8" rel="external nofollow" title="FLSGeoConnect-iOS">
-              <img src="./img/app/fls.png" alt="FLSGeoConnect">
+              <img src="../img/app/fls.png" alt="FLSGeoConnect">
               <span>FLSGeoConnect</span>
             </a>
           </li>
 
           <li>
             <a href="http://www.getfirecat.com/" rel="external nofollow" title="Firecat">
-              <img src="./img/app/firecat.png" alt="Firecat">
+              <img src="../img/app/firecat.png" alt="Firecat">
               <span>Firecat</span>
             </a>
           </li>
 
           <li>
             <a href="https://itunes.apple.com/us/app/anycdote/id971437731?ls=1&mt=8" rel="external nofollow" title="Anycdote">
-              <img src="./img/app/anycdote.png" alt="Anycdote">
+              <img src="../img/app/anycdote.png" alt="Anycdote">
               <span>Anycdote</span>
             </a>
           </li>
@@ -77,28 +77,18 @@
         <ul class="apps">
           <li>
             <a href="https://play.google.com/store/apps/details?id=com.geoconnectpro&hl=en" rel="external nofollow" title="FLSGeoConnect-Android">
-              <img src="./img/app/fls.png" alt="FLSGeoConnect">
+              <img src="../img/app/fls.png" alt="FLSGeoConnect">
               <span>FLSGeoConnect</span>
             </a>
           </li>
           <li>
             <a href="https://play.google.com/store/apps/details?id=com.vinous.android&hl=en" rel="external nofollow" title="FLSGeoConnect-Android">
-              <img src="./img/app/vinous.png" alt="FLSGeoConnect">
+              <img src="../img/app/vinous.png" alt="FLSGeoConnect">
               <span>Vinous</span>
             </a>
           </li>
         </ul>
-
-        <h3>Latest Slack Apps</h3>
-        <ul class="apps">
-          <li>
-            <a href="https://tryminerva.com/" rel="external nofollow" title="Minerva">
-              <img src="./img/app/minerva.png" alt="Minerva">
-              <span>Minerva</span>
-            </a>
-          </li>
-        </ul>
-
+        
         <h2>Personal Projects</h2>
 
         <p>
