add more apps and personal projects

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
             I work at <a href="https://www.barefootcoders.com" target="_blank">Barefoot Coders</a> as a software engineer developing numerous native apps. Additionally, I'm a mentor at <a href="http://hacker.fund/" target="_blank">Hacker Fund</a> where I help teach high school students to code. You can check out more details on my <a href="/work">Work</a> page.
           </p>
 
-
-
+          <p>
+            I'm currently traveling around Asia with a group called <a href="http://www.hackerparadise.org/" rel="external nofollow" target="_blank">Hacker Paradise</a>. I'm writing this from a coffee shop in Kyoto, Japan and I will be making my way down to Chiang Mai, Thailand in the next couple of days.
+          </p>
 
           <h3>Latest Apps</h3>
 
