--- a/work/index.html
+++ b/work/index.html
@@ -35,7 +35,7 @@
         </p>
 
         <p>
-          Since I moved to Silicon Valley in May of 2015, I have worked on several mobile apps. Most recently, I've been working on <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" target="_blank">Vinous</a> and <a href="https://itunes.apple.com/us/app/flsgeoconnect/id386641739?mt=8" rel="external nofollow" target="_blank">FLSGeoConnect</a> as the lead mobile developer. Vinous' iOS app is built natively in Objective-C and Swift while its Android app and FLSGeoConnect are built using <a href="https://facebook.github.io/react-native/" rel="external nofollow" target="_blank">React-Native</a>, <a href="http://redux.js.org/" rel="external nofollow" target="_blank">Redux</a>, and Javascript.
+          Since I moved to Silicon Valley in May of 2015, I have worked on several mobile apps. Most recently, I've been working on <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" target="_blank">Vinous</a> and <a href="https://itunes.apple.com/us/app/flsgeoconnect/id386641739?mt=8" rel="external nofollow" target="_blank">FLSGeoConnect</a>. Vinous' iOS app is built natively in Objective-C and Swift while its Android app and FLSGeoConnect are built using <a href="https://facebook.github.io/react-native/" rel="external nofollow" target="_blank">React-Native</a>, <a href="http://redux.js.org/" rel="external nofollow" target="_blank">Redux</a>, and Javascript.
         </p>
 
         <p>
@@ -71,6 +71,13 @@
               <span>Anycdote</span>
             </a>
           </li>
+
+          <li>
+            <a href="https://itunes.apple.com/us/app/bellhops/id939797180?mt=8" rel="external nofollow" title="Bellhops">
+              <img src="../img/app/bellhops.png" alt="Bellhops">
+              <span>Bellhops</span>
+            </a>
+          </li>
         </ul>
 
         <h3>Latest Android Apps</h3>
@@ -87,8 +94,14 @@
               <span>Vinous</span>
             </a>
           </li>
+          <li>
+            <a href="https://play.google.com/store/apps/details?id=com.bellhops.bellhops&hl=en" rel="external nofollow" title="Bellhops">
+              <img src="../img/app/bellhops.png" alt="Bellhops">
+              <span>Bellhops</span>
+            </a>
+          </li>
         </ul>
-        
+
         <h2>Personal Projects</h2>
 
         <p>
@@ -100,13 +113,27 @@
         </h3>
 
         <p>
-           This is a slack that helps mentors connect with hackers at hackathons. It most recently used at University of Michigan's hackathon, <a href="http://mhacks.com/">MHacks 8</a>.
+          This is a slack that helps mentors connect with hackers at hackathons. It most recently used at University of Michigan's hackathon, <a href="http://mhacks.com/">MHacks 8</a>.
+        </p>
+
+        <h3><a href="https://getfirecat.com/">Firecat</a></h3>
+
+        <p>
+          One day I got tired of taking and giving business cards so I made an app that allows me to simply select what contact card I want to share with someone and then it let's me send that card to someone via sms or email. Firecat is currently in a private beta but you can request to join via Testflight by clicking the above link.
         </p>
 
         <h3><a href="https://anycdote.com/">Anycdote</a></h3>
 
         <p>
-           This platform was inspired by Humans of New York. Anycdote allows users to pin personal stories to geographic locations. Other users can then experience stories that close to them by proximity. Anycdote is written completely in Swift and relies on a <a href="https://parse.com" target="_blank">Parse</a> backend.
+          This platform was inspired by Humans of New York. Anycdote allows users to pin personal stories to geographic locations. Other users can then experience stories that close to them by proximity. Anycdote is written completely in Swift and relies on a <a href="https://parse.com" target="_blank">Parse</a> backend.
+        </p>
+
+        <h3>
+          Project Reach
+        </h3>
+
+        <p>
+          This is a secure & discrete communication platform I made for reporters who work in dangerous areas. I built Reach because I believe that every person is entitled to freedom of speech. Project Reach is both a web app and a native Android app built using <a href="https://facebook.github.io/react/" target="_blank">React</a> and and <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. Reach is currently under development but even so, it encrypts data using SSH and protects users by disguising itself as a different app as well as tying accounts to devices rather than people. Testing is currenly being conducted between Harvard and users in Syria.
         </p>
       </div>
 
