correct work page

--- a/work/index.html
+++ b/work/index.html
@@ -39,7 +39,7 @@
         </p>
 
         <p>
-          Previously, I worked as a mobile developer on <a href="http://www.getbellhops.com" rel="external nofollow" target="_blank">Bellhops</a>, <a href="http://www.hashtack.com" rel="external nofollow" target="_blank">Hashtack</a>, and <a href="http://www.anycdote.com" rel="external nofollow" target="_blank">Anycdote</a>. You can check out more details in my <a href="/work">Work</a> page.
+          Previously, I worked as a mobile developer on <a href="http://www.getbellhops.com" rel="external nofollow" target="_blank">Bellhops</a>, <a href="http://www.hashtack.com" rel="external nofollow" target="_blank">Hashtack</a>, and <a href="http://www.anycdote.com" rel="external nofollow" target="_blank">Anycdote</a>.
         </p>
 
         <h3>Latest iOS Apps</h3>
