--- a/work/index.html
+++ b/work/index.html
@@ -42,7 +42,7 @@
           Previously, I worked as a mobile developer on <a href="http://www.getbellhops.com" rel="external nofollow" target="_blank">Bellhops</a>, <a href="http://www.hashtack.com" rel="external nofollow" target="_blank">Hashtack</a>, and <a href="http://www.anycdote.com" rel="external nofollow" target="_blank">Anycdote</a>.
         </p>
 
-        <h3>Latest iOS Apps</h3>
+        <h3>iOS Apps</h3>
 
         <ul class="apps">
           <li>
@@ -80,7 +80,7 @@
           </li>
         </ul>
 
-        <h3>Latest Android Apps</h3>
+        <h3>Android Apps</h3>
         <ul class="apps">
           <li>
             <a href="https://play.google.com/store/apps/details?id=com.geoconnectpro&hl=en" rel="external nofollow" title="FLSGeoConnect-Android">
@@ -98,6 +98,16 @@
             <a href="https://play.google.com/store/apps/details?id=com.bellhops.bellhops&hl=en" rel="external nofollow" title="Bellhops">
               <img src="../img/app/bellhops.png" alt="Bellhops">
               <span>Bellhops</span>
+            </a>
+          </li>
+        </ul>
+
+        <h3>Slack Apps</h3>
+        <ul class="apps">
+          <li>
+            <a href="https://tryminerva.com" rel="external nofollow" title="Minerva">
+              <img src="../img/app/minerva.png" alt="Minerva">
+              <span>Minerva</span>
             </a>
           </li>
         </ul>
