add hashtack and switch tabs

--- a/about/index.html
+++ b/about/index.html
@@ -19,9 +19,9 @@
     <div class="site">
       <div class="header">
         <a href="/">Home</a>
-        <a style="color:black">About</a>
         <a href="/work">Work</a>
-        <a href="https://medium.com/@danstepanov">Blog</a>
+        <a style="color:black">About</a>
+        <a href="https://medium.com/@danstepanov" target="_blank">Blog</a>
       </div>
       <script type="text/javascript">
         mixpanel.track_links("#nav a", "click nav link", {
