--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="site">
       <div class="header" id="nav">
         <a style="color:black">Home</a>
-        <a href="/about">About</a>
         <a href="/work">Work</a>
-        <a href="https://medium.com/@danstepanov">Blog</a>
+        <a href="/about">About</a>
+        <a href="https://medium.com/@danstepanov" target="_blank">Blog</a>
       </div>
       <script type="text/javascript">
         mixpanel.track_links("#nav a", "click nav link", {
