all links open in a new page now

--- a/about/index.html
+++ b/about/index.html
@@ -32,11 +32,11 @@
     		<h2>About Me</h2>
 
   		  <p>
-          I am a <a href="https://github.com/danstepanov" rel="external nofollow">Swift and React-Native engineer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">hackathon junky</a>, wanna-be designer, classic car enthusiast, and hummus lover. I live in Palo Alto but I tend to travel a lot.
+          I am a <a href="https://github.com/danstepanov" rel="external nofollow" target="_blank">Swift and React-Native engineer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav" target="_blank">hackathon junky</a>, wanna-be designer, classic car enthusiast, and hummus lover. I live in Palo Alto but I tend to travel a lot.
         </p>
 
         <p>
-          I graduated with a degree in Chemical Engineering from Penn State in May of 2015. While in college, I ran my own company and headed the <a href="http://www.innoblue.org/">Innoblue</a> Venture Accelerator where I helped five student teams transform their ideas into effective businesses.
+          I graduated with a degree in Chemical Engineering from Penn State in May of 2015. While in college, I ran my own company and headed the <a href="http://www.innoblue.org/" target="_blank">Innoblue</a> Venture Accelerator where I helped five student teams transform their ideas into effective businesses.
         </p>
 
         <p>
@@ -44,7 +44,7 @@
         </p>
 
         <p>
-          Outside of technology, I've been reading a lot about the Chinese style of Buddhism known as Zen. One particular concept that really stands out to me is Shoshin, or "Beginner's Mind." Beginners learn the most effectively as their minds are, inherently, ready to learn. By suppressing arrogance/pride and approaching each learning opportunity with the mentality of a beginner, I can ensure that I absorb the maximum amount of information available. I highly recommend the book <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=zen+mind+beginner%27s+mind+book">Zen Mind, Beginner's Mind</a> by Shunryū Suzuki. I also enjoy hiking, biking, and almost anything involving water.
+          Outside of technology, I've been reading a lot about the Chinese style of Buddhism known as Zen. One particular concept that really stands out to me is Shoshin, or "Beginner's Mind." Beginners learn the most effectively as their minds are, inherently, ready to learn. By suppressing arrogance/pride and approaching each learning opportunity with the mentality of a beginner, I can ensure that I absorb the maximum amount of information available. I highly recommend the book <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=zen+mind+beginner%27s+mind+book" target="_blank">Zen Mind, Beginner's Mind</a> by Shunryū Suzuki. I also enjoy hiking, biking, and almost anything involving water.
         </p>
 
   		  <p>Ask me things on Twitter if you're curious.</p>
