--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 
           <ul class="apps">
             <li>
-              <a href="https://tryminerva.com/" rel="external nofollow" title="Minerva">
+              <a href="https://tryminerva.com/" rel="external nofollow" title="Minerva" target="_blank">
                 <img src="./img/app/minerva.png" alt="Minerva">
                 <span>Minerva</span>
               </a>
             </li>
             <li>
-              <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" title="Vinous">
+              <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" title="Vinous" target="_blank">
                 <img src="./img/app/vinous.png" alt="Vinous">
                 <span>Vinous</span>
               </a>
             </li>
             <li>
-              <a href="https://itunes.apple.com/us/app/geoconnect-pro/id1105973922?mt=8" rel="external nofollow" title="FLSGeoConnect-iOS">
+              <a href="https://itunes.apple.com/us/app/geoconnect-pro/id1105973922?mt=8" rel="external nofollow" title="FLSGeoConnect-iOS" target="_blank">
                 <img src="./img/app/fls.png" alt="FLSGeoConnect">
                 <span>FLSGeoConnect</span>
               </a>
