--- a/work/index.html
+++ b/work/index.html
@@ -126,7 +126,7 @@
         </h3>
 
         <p>
-          This is a slack that helps mentors connect with hackers at hackathons. It most recently used at University of Michigan's hackathon, <a href="http://mhacks.com/" target="_blank">MHacks 8</a>.
+          Minerva is a slack app that helps mentors connect with hackers at hackathons. It was, most recently, used at University of Michigan's hackathon, <a href="http://mhacks.com/" target="_blank">MHacks 8</a>.
         </p>
 
         <h3><a href="https://getfirecat.com/" target="_blank">Firecat</a></h3>
@@ -138,7 +138,7 @@
         <h3><a href="https://itunes.apple.com/us/app/anycdote/id971437731?ls=1&mt=8" target="_blank">Anycdote</a></h3>
 
         <p>
-          This platform was inspired by Humans of New York. Anycdote allows users to pin personal stories to geographic locations. Other users can then experience stories that close to them by proximity. Anycdote is written completely in Swift and relies on a <a href="https://parse.com" target="_blank">Parse</a> backend.
+          Anycdote was inspired by Humans of New York. The app allows users to pin personal stories to geographic locations. Other users can then experience stories that close to them by proximity. Anycdote is written completely in Swift and relies on a <a href="https://parse.com" target="_blank">Parse</a> backend.
         </p>
 
         <h3>
@@ -146,7 +146,7 @@
         </h3>
 
         <p>
-          This is a secure & discrete communication platform I made for reporters who work in dangerous areas. I built Reach because I believe that every person is entitled to freedom of speech. Project Reach is both a web app and a native Android app built using <a href="https://facebook.github.io/react/" target="_blank">React</a> and and <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. Reach is currently under development but even so, it encrypts data using SSH and protects users by disguising itself as a different app as well as tying accounts to devices rather than people. Testing is currenly being conducted between Harvard and users in Syria.
+          Reach is a secure &amp; discrete communication platform I made for reporters who work in dangerous areas. I built Reach because I believe that every person is entitled to freedom of speech. Reach is both a web app and a native Android app built using <a href="https://facebook.github.io/react/" target="_blank">React</a> and <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. It is currently under development but, even so, it employs a multitude of features to protect users such as encryption of data using SSH, device-based account association rather than user-based association, and active camouflage via a series of distinct app disguises. Testing is currenly being conducted between Harvard and users in Syria.
         </p>
       </div>
 
